# mactools

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
docs/superpowers/specs/: 2026-04-26-argus-design.md  2026-04-26-argus-kickoff-prompt.md  2026-04-26-mac-admin-design.md
mactools_core/: __init__.py  admin.py  ai.py  defaults.py  diskutil.py  launchctl.py  network.py  output.py  power.py  runner.py  security.py  shortcuts.py  spotlight.py  system_profiler.py  unified_log.py
mactools_macadmin/: ai.py  cli.py  engine.py
mactools_macdefaults/: __init__.py  ai.py  cli.py  engine.py
mactools_macdisk/: ai.py  cli.py  engine.py
mactools_macenergy/: __init__.py  ai.py  cli.py  engine.py
mactools_maclaunch/: ai.py  cli.py  engine.py
mactools_macnet/: __init__.py  ai.py  cli.py  engine.py
mactools_macprivacy/: __init__.py  ai.py  cli.py  engine.py
mactools_macsec/: __init__.py  ai.py  cli.py  engine.py
mactools_macshortcuts/: ai.py  cli.py  engine.py
mactools_macsign/: __init__.py  ai.py  cli.py  engine.py
mactools_macspot/: ai.py  cli.py  engine.py
mactools_opslog/: ai.py  cli.py  engine.py
mactools_opsmac/: ai.py  cli.py  engine.py
tests/: conftest.py  test_cli_smoke.py  test_core_bugfixes.py  test_core_output.py  test_core_parsers.py  test_core_runner.py  test_macadmin_cli.py  test_macadmin_engine.py  test_macdisk_engine.py  test_macenergy_engine.py  test_maclaunch_engine.py  test_macnet_engine.py  test_macprivacy_engine.py  test_macsec_engine.py  test_opslog_engine.py
